--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	],
 	"autoload": {
 		"psr-4": {
-			"Karwana\\Penelope\\": "src/"
+			"Karwana\\Penelope\\": "Penelope/"
 		}
 	},
 	"require": {
