--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
 		}
 	},
 	"require": {
-		"php": ">=5.4.0",
+		"php": ">=5.5.0",
 		"willdurand/negotiation": "~1.3.3",
 		"alcohol/iso3166": "~1.0.3",
-		"dflydev/apache-mime-types": "~1.0.1"
+		"dflydev/apache-mime-types": "~1.0.1",
+		"rhumsaa/uuid": "~2.7.1"
 	},
 	"require-dev": {
 		"slim/slim": "~2.4.3",
