--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
 	},
 	"require-dev": {
 		"slim/slim": "~2.4.3",
-		"everyman/neo4jphp": "dev-master"
+		"everyman/neo4jphp": "dev-master",
+		"phing/phing": "~2.8.1",
+		"squizlabs/php_codesniffer": "~1.5.3"
 	}
 }
