--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"willdurand/negotiation": "~1.3.3",
 		"alcohol/iso3166": "~1.0.3",
 		"dflydev/apache-mime-types": "~1.0.1",
-		"rhumsaa/uuid": "~2.7.1"
+		"rhumsaa/uuid": "~2.7.1",
+		"karwana/messageformat": "~1.0.0"
 	},
 	"require-dev": {
 		"slim/slim": "~2.4.3",
