Add home message

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -30,7 +30,8 @@ edge_parent_link_text = "Back to {0}"
 
 edge_to_label = "To"
 
-home_empty = "No nodes defined"
+home = "Browse nodes by type."
+home_empty = "No nodes defined."
 
 view_node_link = "View <a href=\"{0}\" title=\"{1}\">{1}</a>."
 view_nodes_link = "See all <a href=\"{0}\">{1}</a> nodes."
