MessageFormat for node header

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -11,11 +11,11 @@ new_edge_button_text = "New"
 create_edge_button_text = "Create"
 create_edge_error = "Error while creating relationship: {0}"
 
-edit_edge_title = "Edit {0}"
-edit_edge_link_text = "Edit"
+edit_edge_button_title = "Edit {0}"
+edit_edge_button_text = "Edit"
 
-view_edge_title = "{0}"
-view_edge_link_text = "View"
+view_edge_button_title = "{0}"
+view_edge_button_text = "View"
 view_edge_link = "View <a href=\"{0}\" title=\"{1}\">{1}</a>."
 
 view_edge_collection_button_title = "{0} List"
@@ -32,8 +32,19 @@ edge_to_label = "To"
 home = "Browse nodes by type."
 home_empty = "No nodes defined."
 
+view_node_button_title = "{0}"
+view_node_button_text = "View"
 view_node_link = "View <a href=\"{0}\" title=\"{1}\">{1}</a>."
+
+view_node_collection_button_title = "{0} List"
+view_node_collection_button_text = "View all"
 view_node_collection_link = "See all <a href=\"{0}\">{1}</a> nodes."
+
+edit_node_button_title = "Edit {0}"
+edit_node_button_text = "Edit"
+
+new_node_button_title = "Create a new {0}"
+new_node_button_text = "New"
 
 update_node_button_text = "Update"
 update_node_error = "Error while updating node: {0}"
