MessageFormat for controllers

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -22,6 +22,7 @@ view_edge_collection_button_title = "{0} List"
 view_edge_collection_button_text = "View all"
 view_edge_collection_link = "See all <a href=\"{0}\">{1}</a> relationships."
 
+edge_collection_title = "{0} Relationships From {1}"
 edge_collection_empty = "There aren't any {0} relationships."
 
 edge_parent_button_title = "{0}"
@@ -29,6 +30,14 @@ edge_parent_button_text = "Back to {0}"
 
 edge_to_label = "To"
 
+new_edge_title = "New {0} Relationship From {1}"
+
+edge_created_title = "Created {0}"
+edge_deleted_title = "Deleted {0}"
+
+edit_edge_title = "Edit {0}"
+
+home_title = "Welcome"
 home = "Browse nodes by type."
 home_empty = "No nodes defined."
 
@@ -56,4 +65,11 @@ create_node_button_text = "Create"
 
 node_edges_title = "Relationships"
 
+node_collection_title = "{0} List"
 node_collection_empty = "There aren't any {0} nodes."
+
+node_created_title = "{0} Created"
+node_deleted_title = "Deleted {0}"
+
+new_node_title = "New {0}"
+edit_node_title = "Edit {0}"
