Use MessageFormat to format date property values

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -73,3 +73,6 @@ node_deleted_title = "Deleted {0}"
 
 new_node_title = "New {0}"
 edit_node_title = "Edit {0}"
+
+property_date_value = "{0,date,long}"
+property_datetime_value = "{0,date,medium} {0,time,medium}"
