Show totals on homepage and sort by name

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -38,7 +38,7 @@ edge_deleted_title = "Deleted {0}"
 edit_edge_title = "Edit {0}"
 
 home_title = "Welcome"
-home = "Browse nodes by type."
+home = "Browse {0,number,integer} nodes by type."
 home_empty = "No nodes defined."
 
 view_node_button_title = "{0}"
@@ -76,3 +76,5 @@ edit_node_title = "Edit {0}"
 
 property_date_value = "{0,date,long}"
 property_datetime_value = "{0,date,medium} {0,time,medium}"
+
+node_schema_name_total = "{0} ({1,number,integer})"
