Message when no relationships are defined

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -64,6 +64,7 @@ create_node_error = "Error while creating node: {0}"
 create_node_button_text = "Create"
 
 node_edges_title = "Relationships"
+node_edges_none_defined = "None defined."
 
 node_collection_title = "{0} List"
 node_collection_empty = "There aren't any {0} nodes."
