--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -38,7 +38,7 @@ edge_deleted_title = "Deleted {0}"
 edit_edge_title = "Edit {0}"
 
 home_title = "Welcome"
-home = "Browse {0,number,integer} nodes by type."
+home = "Browse {0,plural,one{1 node} other{# nodes}} by type."
 home_empty = "No nodes defined."
 
 view_node_button_title = "{0}"
