--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -29,6 +29,7 @@ edge_parent_button_title = "{0}"
 edge_parent_button_text = "Back to {0}"
 
 edge_to_label = "To"
+edge_to_none = "No other {0} nodes are defined. Please <a href=\"{1}\" title=\"{2}\">create a new one</a>."
 
 new_edge_title = "New {0} Relationship From {1}"
 
