--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -22,7 +22,7 @@ view_edge_collection_button_title = "{0} List"
 view_edge_collection_button_text = "View all"
 view_edge_collection_link = "See all <a href=\"{0}\">{1}</a> relationships."
 
-edge_collection_title = "{0} Relationships From {1}"
+edge_collection_title = "<b>{0}</b> Relationships From <b>{1}</b>"
 edge_collection_empty = "There aren't any {0} relationships."
 
 edge_parent_button_title = "{0}"
@@ -31,12 +31,12 @@ edge_parent_button_text = "Back to {0}"
 edge_to_label = "To"
 edge_to_none = "No other {0} nodes are defined. Please <a href=\"{1}\" title=\"{2}\">create a new one</a>."
 
-new_edge_title = "New {0} Relationship From {1}"
+new_edge_title = "New <b>{0}</b> Relationship From <b>{1}</b>"
 
-edge_created_title = "Created {0}"
-edge_deleted_title = "Deleted {0}"
+edge_created_title = "Created <b>{0}</b>"
+edge_deleted_title = "Deleted <b>{0}</b>"
 
-edit_edge_title = "Edit {0}"
+edit_edge_title = "Editing <b>{0}</b>"
 
 home_title = "Welcome"
 home = "Browse {0,plural,one{1 node} other{# nodes}} by type."
@@ -67,14 +67,14 @@ create_node_button_text = "Create"
 node_edges_title = "Relationships"
 node_edges_none_defined = "None defined."
 
-node_collection_title = "{0} List"
+node_collection_title = "<b>{0}</b> List"
 node_collection_empty = "There aren't any {0} nodes."
 
-node_created_title = "{0} Created"
-node_deleted_title = "Deleted {0}"
+node_created_title = "Created <b>{0}</b>"
+node_deleted_title = "Deleted <b>{0}</b>"
 
-new_node_title = "New {0}"
-edit_node_title = "Edit {0}"
+new_node_title = "New <b>{0}</b>"
+edit_node_title = "Editing <b>{0}</b>"
 
 property_date_value = "{0,date,long}"
 property_datetime_value = "{0,date,medium} {0,time,medium}"
