--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -80,3 +80,9 @@ property_date_value = "{0,date,long}"
 property_datetime_value = "{0,date,medium} {0,time,medium}"
 
 node_schema_name_total = "{0} ({1,number,integer})"
+
+search_title = "Search - {0}"
+search_title_no_q = "Search"
+search_placeholder = "Search"
+search_submit = "&#xf002"
+search_no_results = "No results for <b>{0}</b>. Please try another query."
