Label empty option

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -86,3 +86,5 @@ search_title_no_q = "Search"
 search_placeholder = "Search"
 search_submit = "&#xf002"
 search_no_results = "No results for <b>{0}</b>. Please try another query."
+
+option_none = "&lt;none&gt;"
