--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -88,3 +88,6 @@ search_submit = "&#xf002"
 search_no_results = "No results for <b>{0}</b>. Please try another query."
 
 option_none = "&lt;none&gt;"
+
+collection_next_page = "Next Page"
+collection_prev_page = "Previous Page"
