Some text changes

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -3,13 +3,13 @@
 application_title = "Penelope"
 application_footer = "Thank you for using <a href=\"https://github.com/karwana/penelope\">Penelope</a>, an open source project by <a href=\"http://www.karwana.com/\">Karwana</a>. With &#x2764; from Costa Rica."
 
-update_edge_error = "Error while updating relationship: {0}"
+update_edge_error = "There was an error while updating the relationship: {0}"
 
 new_edge_button_title = "Create a new {0} relationship from {1}"
 new_edge_button_text = "New"
 
 create_edge_button_text = "Create"
-create_edge_error = "Error while creating relationship: {0}"
+create_edge_error = "There was an error while creating the relationship: {0}"
 
 edit_edge_button_title = "Edit {0}"
 edit_edge_button_text = "Edit"
@@ -20,7 +20,7 @@ view_edge_link = "View <a href=\"{0}\" title=\"{1}\">{1}</a>."
 
 view_edge_collection_button_title = "{0} List"
 view_edge_collection_button_text = "View all"
-view_edge_collection_link = "See all <a href=\"{0}\">{1}</a> relationships."
+view_edge_collection_link = "View all <a href=\"{0}\">{1}</a> relationships."
 
 edge_collection_title = "<b>{0}</b> Relationships From <b>{1}</b>"
 edge_collection_empty = "There aren't any {0} relationships."
@@ -48,7 +48,7 @@ view_node_link = "View <a href=\"{0}\" title=\"{1}\">{1}</a>."
 
 view_node_collection_button_title = "{0} List"
 view_node_collection_button_text = "View all"
-view_node_collection_link = "See all <a href=\"{0}\">{1}</a> nodes."
+view_node_collection_link = "View all <a href=\"{0}\">{1}</a> nodes."
 
 edit_node_button_title = "Edit {0}"
 edit_node_button_text = "Edit"
