Edge titles should have the form 'x relationship between y and z'

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -22,6 +22,8 @@ view_edge_collection_button_title = "{0} List"
 view_edge_collection_button_text = "View all"
 view_edge_collection_link = "View all <a href=\"{0}\">{1}</a> relationships."
 
+edge_title = "{0} relationship between <b>{1}</b> and <b>{2}</b>"
+
 edge_collection_title = "<b>{0}</b> Relationships From <b>{1}</b>"
 edge_collection_empty = "There aren't any {0} relationships."
 
@@ -33,10 +35,10 @@ edge_to_none = "Please <a href=\"{1}\" title=\"{2}\">create a new {0}</a> to cre
 
 new_edge_title = "New <b>{0}</b> Relationship From <b>{1}</b>"
 
-edge_created_title = "Created <b>{0}</b>"
-edge_deleted_title = "Deleted <b>{0}</b>"
+edge_created_title = "Created {0} relationship between <b>{1}</b> and <b>{2}</b>"
+edge_deleted_title = "Deleted {0} relationship between <b>{1}</b> and <b>{2}</b>"
 
-edit_edge_title = "Editing <b>{0}</b>"
+edit_edge_title = "Editing {0} relationship between <b>{1}</b> and <b>{2}</b>"
 
 home_title = "Welcome"
 home = "Browse {0,plural,one{1 node} other{# nodes}} by type."
