--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -3,6 +3,8 @@
 application_title = "Penelope"
 application_footer = "Thank you for using <a href=\"https://github.com/karwana/penelope\">Penelope</a>, an open source project by <a href=\"http://www.karwana.com/\">Karwana</a>. With &#x2764; from Costa Rica."
 
+application_about_button_text = "About"
+
 update_edge_error = "There was an error while updating the relationship: {0}"
 
 new_edge_button_title = "Create a new {0} relationship from {1}"
