--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -1,7 +1,11 @@
 [penelope]
 
 application_title = "Penelope"
-application_footer = "Thank you for using <a href=\"https://github.com/karwana/penelope\">Penelope</a>, an open source project by <a href=\"http://www.karwana.com/\">Karwana</a>. With &#x2764; from Costa Rica."
+
+application_intro = ""
+application_outro = "Thank you for using <a href=\"https://github.com/karwana/penelope\">Penelope</a>, an open source project by <a href=\"http://www.karwana.com/\">Karwana</a>. With &#x2764; from Costa Rica."
+
+application_license = "The database is made available under the <a href=\"http://opendatacommons.org/licenses/odbl/1.0/\">Open Database License</a>."
 
 application_about_button_text = "About"
 
@@ -88,7 +92,7 @@ node_schema_name_total = "{0} ({1,number,integer})"
 search_title = "Search - {0}"
 search_title_no_q = "Search"
 search_placeholder = "Search"
-search_submit = "&#xf002"
+search_submit = "Search"
 search_no_results = "No results for <b>{0}</b>. Please try another query."
 
 option_none = "&lt;none&gt;"
