Default theme overhaul in progress

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -75,7 +75,7 @@ create_node_button_text = "Create"
 node_edges_title = "Relationships"
 node_edges_none_defined = "None defined."
 
-node_collection_title = "<b>{0}</b> List"
+node_collection_title = "{0}"
 node_collection_empty = "There aren't any {0} nodes."
 
 node_created_title = "Created <b>{0}</b>"
@@ -91,9 +91,11 @@ node_schema_name_total = "{0} ({1,number,integer})"
 
 search_title = "Search - {0}"
 search_title_no_q = "Search"
+search_breadcrumb = "Search"
 search_placeholder = "Search"
 search_submit = "Search"
 search_no_results = "No results for <b>{0}</b>. Please try another query."
+search_result_count = "{0,plural,one{1 result} other{# results}}"
 
 option_none = "&lt;none&gt;"
 
