--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -84,6 +84,8 @@ node_deleted_title = "Deleted <b>{0}</b>"
 new_node_title = "New <b>{0}</b>"
 edit_node_title = "Editing <b>{0}</b>"
 
+object_properties_title = "Properties"
+
 property_date_value = "{0,date,long}"
 property_datetime_value = "{0,date,medium} {0,time,medium}"
 
