Optional error view

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -103,3 +103,5 @@ option_none = "&lt;none&gt;"
 
 collection_next_page = "Next Page"
 collection_prev_page = "Previous Page"
+
+error_breadcrumb = "Error"
