Use Slims's notFound handler instead of render404

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -105,3 +105,9 @@ collection_next_page = "Next Page"
 collection_prev_page = "Previous Page"
 
 error_breadcrumb = "Error"
+error_404_title = "Not Found"
+error_404 = "The requested page cannot be found."
+error_403_title = "Forbidden"
+error_403 = "You are not authorized to view the requested page."
+error_unknown = "There was an error."
+error_details_caption = "Error details:"
