Add section nav menu

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -70,6 +70,7 @@ delete_node_button_text = "Delete"
 create_node_error = "Error while creating node: {0}"
 create_node_button_text = "Create"
 
+node_main_title = "Properties"
 node_edges_title = "Relationships"
 node_edges_none_defined = "None defined."
 node_edge_link_title = "Relationship details"
