What to show when there are no edges

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -72,6 +72,7 @@ create_node_button_text = "Create"
 
 node_main_title = "Properties"
 node_edges_title = "Relationships"
+node_edges_none = "No relationships."
 node_edges_none_defined = "None defined."
 node_edge_link_title = "Relationship details"
 
