Corresponding text for logout button

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -8,6 +8,7 @@ application_outro = "Thank you for using <a href=\"https://github.com/karwana/pe
 application_license = "The database is made available under the <a href=\"http://opendatacommons.org/licenses/odbl/1.0/\">Open Database License</a>."
 
 application_login_button_text = "Login"
+application_logout_button_text = "Logout"
 
 update_edge_error = "There was an error while updating the relationship: {0}"
 
