Search by properties

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -98,7 +98,7 @@ search_title_no_q = "Search"
 search_breadcrumb = "Search"
 search_placeholder = "Search"
 search_submit = "Search"
-search_no_results = "No results for \"<b>{0}</b>\". Please try another query."
+search_no_results = "No results for your query Please try another one."
 search_result_count = "{0,plural,one{1 result} other{# results}}"
 
 option_none = "&lt;none&gt;"
