--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
 			"Karwana\\Penelope\\": "Penelope/"
 		}
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Karwana\\Penelope\\Tests\\": "tests/Penelope/"
+		}
+	},
 	"require": {
 		"php": ">=5.5.0",
 		"willdurand/negotiation": "~1.3.3",
