--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -77,6 +77,9 @@ node_edges_none = "No relationships."
 node_edges_none_defined = "None defined."
 node_edge_link_title = "Relationship details"
 
+node_main_anchor = "main"
+node_edges_anchor = "edges"
+
 node_collection_title = "{0}"
 node_collection_empty = "There aren't any {0} nodes."
 
