--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -10,7 +10,11 @@ application_license = "The database is made available under the <a href=\"http:/
 application_login_button_text = "Login"
 application_logout_button_text = "Logout"
 
+update_edge_button_text = "Update"
 update_edge_error = "There was an error while updating the relationship: {0}"
+
+delete_edge_button_text = "Delete"
+delete_edge_confirm = "Are you sure you want to delete {0}?"
 
 new_edge_button_title = "Create a new {0} relationship from {1}"
 new_edge_button_text = "New"
@@ -67,6 +71,7 @@ update_node_button_text = "Update"
 update_node_error = "Error while updating node: {0}"
 
 delete_node_button_text = "Delete"
+delete_node_confirm = "Are you sure you want to delete {0}?"
 
 create_node_error = "Error while creating node: {0}"
 create_node_button_text = "Create"
