Say something when the node or edge has no properties

--- a/themes/default/_lang/en.ini
+++ b/themes/default/_lang/en.ini
@@ -49,6 +49,8 @@ edge_deleted_title = "Deleted {0}"
 
 edit_edge_title = "Editing {0}"
 
+edge_no_properties = "This relationship has no properties."
+
 home_title = "Welcome"
 home = "Browse {0,plural,one{1 node} other{# nodes}} by type."
 home_empty = "No nodes defined."
@@ -93,6 +95,8 @@ node_deleted_title = "Deleted <b>{0}</b>"
 
 new_node_title = "New <b>{0}</b>"
 edit_node_title = "Editing <b>{0}</b>"
+
+node_no_properties = "This object has no properties."
 
 object_properties_title = "Properties"
 
