--- a/themes/default/_lang/es.ini
+++ b/themes/default/_lang/es.ini
@@ -49,6 +49,8 @@ edge_deleted_title = "<b>{0}</b> eliminado"
 
 edit_edge_title = "Editando {0}"
 
+edge_no_properties = "Esa relación no tiene datos."
+
 home_title = "Persona de Interés"
 
 view_node_button_title = "{0}"
@@ -93,6 +95,8 @@ node_deleted_title = "<b>{0}</b> eliminado"
 
 new_node_title = "Nuevo <b>{0}</b>"
 edit_node_title = "Editando <b>{0}</b>"
+
+node_no_properties = "Ese objeto no tiene datos."
 
 object_properties_title = "Ficha"
 
