--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Karwana\\Penelope\\Tests\\": "tests/Penelope/"
+			"Karwana\\Penelope\\Tests\\": "tests/Penelope/",
+			"Karwana\\Penelope\\Scripts\\": "scripts/Penelope/"
 		}
 	},
 	"require": {
